deploy: 4dccdfe8b98300cbef4ac1b93ea10d77a2e665ee

--- a/openapi/identity-api/1.0.0-alpha/identity-api.yaml
+++ b/openapi/identity-api/1.0.0-alpha/identity-api.yaml
@@ -2042,6 +2042,10 @@ components:
           $ref: "#/components/schemas/Policy"
         issuerId:
           type: string
+        metadata:
+          type: object
+          additionalProperties:
+            type: object
         participantContextId:
           type: string
         reissuancePolicy:
