--- a/openapi/issuer-admin-api/issuer-admin-api.yaml
+++ b/openapi/issuer-admin-api/issuer-admin-api.yaml
@@ -1226,11 +1226,19 @@ components:
             type: string
         credentialType:
           type: string
-        dataModel:
-          type: string
-          enum:
-          - V_1_1
-          - V_2_0
+        formats:
+          uniqueItems: true
+          type: array
+          items:
+            type: string
+            enum:
+            - JSON_LD
+            - JWT
+            - VC1_0_LD
+            - VC1_0_JWT
+            - VC2_0_JOSE
+            - VC2_0_SD_JWT
+            - VC2_0_COSE
         id:
           type: string
         jsonSchema:
@@ -1259,11 +1267,11 @@ components:
             type: string
         credentialType:
           type: string
-        dataModel:
-          type: string
-          enum:
-          - V_1_1
-          - V_2_0
+        formats:
+          uniqueItems: true
+          type: array
+          items:
+            type: string
         id:
           type: string
         jsonSchema:
